[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ropy-types"
version = "0.0.1"
authors = [
  { name="codetariat" },
]
description = "Python to Roblox's Luau transpiler"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codetariat/ropy-types"
"Bug Tracker" = "https://github.com/codetariat/ropy-types/issues"